// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog async demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       异步加载类按钮 
      
    </span>
  </button>
  <transition-stub>
    <div
      class="t-dialog-ctx t-dialog-ctx--fixed v-transfer-dom"
      style="display: none;"
    >
      
      <div
        class="t-dialog-mask"
      />
      <div
        class="t-dialog t-dialog--default t-dialog--top t-dialog--fixed"
        style="max-height: calc(100% - 20%);"
      >
        <div
          class="t-dialog__header"
        >
          <!---->
          保存订单
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body"
        >
          订单保存中，请稍后
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-default t-dialog-cancel"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                取消
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-is-disabled t-is-loading t-dialog-confirm"
              type="button"
            >
              
              <div
                class="t-loading t-size-m t-loading-lock t-loading--inherit-color v-transfer-dom"
              >
                <svg
                  class="t-loading__gradient t-icon-loading"
                  height="1em"
                  size="medium"
                  version="1.1"
                  viewBox="0 0 14 14"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <foreignobject
                    height="12"
                    width="12"
                    x="1"
                    y="1"
                  >
                    <div
                      class="t-loading__gradient-conic"
                    />
                  </foreignobject>
                </svg>
                <!---->
              </div>
              <span
                class="t-button__text"
              >
                
                保存中...
                
              </span>
              
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
</div>
`;

exports[`Dialog attach demo works fine 1`] = `
<div>
  <!-- attach挂载 -->
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       挂载在body 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       挂载特定元素 
      
    </span>
  </button>
  <!-- &lt;t-button theme="primary" @click="visibleFunctionAttach = true"&gt;挂载函数返回节点&lt;/t-button&gt; -->
  <transition-stub>
    <!---->
  </transition-stub>
  <transition-stub>
    <div
      class="t-dialog-ctx t-dialog-ctx--fixed v-transfer-dom"
      style="display: none;"
    >
      
      <div
        class="t-dialog-mask"
      />
      <div
        class="t-dialog t-dialog--default t-dialog--top t-dialog--fixed"
        style="max-height: calc(100% - 20%);"
      >
        <div
          class="t-dialog__header"
        >
          <!---->
          挂载到id为app的元素
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body"
        >
          
          <div>
            通过querySelect指定元素挂载
          </div>
          <div>
            支持原生document.querySelect选择元素
          </div>
          <div>
            querySelect获取到的第一个元素为挂载点
          </div>
          <div>
            我是内容
          </div>
          <div>
            我是内容
          </div>
          
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-default t-dialog-cancel"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                取消
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                确认
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
  <transition-stub>
    <!---->
  </transition-stub>
  <div
    class="t-dialog-ctx t-dialog-ctx--fixed v-transfer-dom"
    style="display: none;"
  >
    
    <div
      class="t-dialog-mask"
    />
    <div
      class="t-dialog t-dialog--default t-dialog--top t-dialog--fixed"
      style="max-height: calc(100% - 20%);"
    >
      <div
        class="t-dialog__header"
      >
        <!---->
        函数返回挂载节点
      </div>
      <span
        class="t-dialog__close"
      >
        <svg
          class="t-icon t-icon-close"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
      </span>
      <div
        class="t-dialog__body"
      >
        
        <div>
          指定函数返回的节点为挂载点
        </div>
        <div>
          函数返回为DOM节点对象
        </div>
        <div>
          我是内容
        </div>
        <div>
          我是内容
        </div>
        <div>
          我是内容
        </div>
        
      </div>
      <div
        class="t-dialog__footer"
      >
        <div>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-default t-dialog-cancel"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              取消
              
            </span>
          </button>
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              确认
              
            </span>
          </button>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Dialog base demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       基础确认对话框 
      
    </span>
  </button>
  <transition-stub>
    <div
      class="t-dialog-ctx t-dialog-ctx--fixed v-transfer-dom"
      style="display: none;"
    >
      
      <div
        class="t-dialog-mask"
      />
      <div
        class="t-dialog t-dialog--default t-dialog--top t-dialog--fixed"
        style="max-height: calc(100% - 20%);"
      >
        <div
          class="t-dialog__header"
        >
          <!---->
          对话框标题
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body"
        >
          对话框内容
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-default t-dialog-cancel"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                取消
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                确认
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
</div>
`;

exports[`Dialog custom demo works fine 1`] = `
<div>
  <p>
    底部按钮有两个控制属性：confirmBtn 和 cancelBtn。属性类型有多种：string | ButtonProps | TNode。
  </p>
  <br />
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       自定义底部按钮（文字） 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       自定义底部按钮（任何按钮属性） 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       自定义底部按钮（自定义组件） 
      
    </span>
  </button>
  <transition-stub>
    <div
      class="t-dialog-ctx t-dialog-ctx--fixed v-transfer-dom"
      style="display: none;"
    >
      
      <div
        class="t-dialog-mask"
      />
      <div
        class="t-dialog t-dialog--default t-dialog--top t-dialog--fixed"
        style="max-height: calc(100% - 20%);"
      >
        <div
          class="t-dialog__header"
        >
          <!---->
          提示
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body"
        >
          自定义底部按钮，直接传入文字
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-default t-dialog-cancel"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                关闭
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                前往支付
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
  <transition-stub>
    <div
      class="t-dialog-ctx t-dialog-ctx--fixed v-transfer-dom"
      style="display: none;"
    >
      
      <div
        class="t-dialog-mask"
      />
      <div
        class="t-dialog t-dialog--default t-dialog--top t-dialog--fixed"
        style="max-height: calc(100% - 20%);"
      >
        <div
          class="t-dialog__header"
        >
          <!---->
          提示
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body"
        >
          自定义底部按钮，传入 ButttonProps
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-outline t-button--theme-default t-dialog-cancel"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                我知道了
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                前往购物车
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
  <transition-stub>
    <div
      class="t-dialog-ctx t-dialog-ctx--fixed v-transfer-dom"
      style="display: none;"
    >
      
      <div
        class="t-dialog-mask"
      />
      <div
        class="t-dialog t-dialog--default t-dialog--top t-dialog--fixed"
        style="max-height: calc(100% - 20%);"
      >
        <div
          class="t-dialog__header"
        >
          <!---->
          提示
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body"
        >
          自定义底部按钮，传入自定义组件
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-default t-dialog-cancel"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                取消
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-is-disabled"
              disabled=""
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                我知道了
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
</div>
`;

exports[`Dialog drag demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       非模态对话框-可拖拽 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       非模态对话框-不可拖拽 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       模态对话框-不支持拖拽 
      
    </span>
  </button>
  <br />
  <transition-stub>
    <div
      class="t-dialog-ctx t-dialog-ctx--fixed v-transfer-dom"
      style="display: none;"
    >
      
      <div
        class="t-dialog-mask"
      />
      <div
        class="t-dialog t-dialog--default t-dialog--top t-dialog--fixed"
        style="max-height: calc(100% - 20%);"
      >
        <div
          class="t-dialog__header"
        >
          <!---->
          模态对话框
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body"
        >
          
          <div>
            默认点击蒙层或按ESC可关闭
          </div>
          <div>
            我是内容
          </div>
          <div>
            我是内容
          </div>
          
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-default t-dialog-cancel"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                取消
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                确认
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
  <transition-stub>
    <div
      class="t-dialog-ctx v-transfer-dom"
      style="display: none;"
    >
      
      <!---->
      <div
        class="t-dialog t-dialog--default t-dialog--top t-dialog--fixed"
        style="max-height: calc(100% - 20%);"
      >
        <div
          class="t-dialog__header"
        >
          <!---->
          非模态对话框-可拖拽
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body"
        >
          
          <div>
            我是内容
          </div>
          <div>
            我是内容
          </div>
          
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-default t-dialog-cancel"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                取消
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                确认
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
  <transition-stub>
    <div
      class="t-dialog-ctx v-transfer-dom"
      style="display: none;"
    >
      
      <!---->
      <div
        class="t-dialog t-dialog--default t-dialog--top t-dialog--fixed"
        style="max-height: calc(100% - 20%);"
      >
        <div
          class="t-dialog__header"
        >
          <!---->
          非模态对话框-不可拖拽
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body"
        >
          
          <div>
            我是内容
          </div>
          <div>
            我是内容
          </div>
          
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-default t-dialog-cancel"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                取消
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                确认
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
</div>
`;

exports[`Dialog icon demo works fine 1`] = `
<div>
  <transition-stub>
    <div
      class="t-dialog-ctx v-transfer-dom"
      style="display: none;"
    >
      
      <!---->
      <div
        class="t-dialog t-dialog--default t-dialog--top"
        style="max-height: calc(100% - 20%);"
      >
        <div
          class="t-dialog__header"
        >
          <svg
            class="t-icon t-icon-info-circle-filled t-is-info t-is-info"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
          下单确认
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body__icon"
        >
          信息已全部保存，是否确认下单？
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-default t-dialog-cancel"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                取消
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                确认
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
  <br />
  <transition-stub>
    <div
      class="t-dialog-ctx v-transfer-dom"
      style="display: none;"
    >
      
      <!---->
      <div
        class="t-dialog t-dialog--default t-dialog--top"
        style="max-height: calc(100% - 20%);"
      >
        <div
          class="t-dialog__header"
        >
          <svg
            class="t-icon t-icon-error-circle-filled t-is-warning t-is-warning"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
          温馨提示
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body__icon"
        >
          系统重启后会短暂影响页面访问，确认重启吗？
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-default t-dialog-cancel"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                取消
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                确认
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
  <br />
  <transition-stub>
    <div
      class="t-dialog-ctx v-transfer-dom"
      style="display: none;"
    >
      
      <!---->
      <div
        class="t-dialog t-dialog--default t-dialog--top"
        style="max-height: calc(100% - 20%);"
      >
        <div
          class="t-dialog__header"
        >
          <svg
            class="t-icon t-icon-error-circle-filled t-is-error t-is-error"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
          推送失败
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body__icon"
        >
          请检查推送数据是否符合要求
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-default t-dialog-cancel"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                取消
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                确认
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
  <br />
  <transition-stub>
    <div
      class="t-dialog-ctx v-transfer-dom"
      style="display: none;"
    >
      
      <!---->
      <div
        class="t-dialog t-dialog--default t-dialog--top"
        style="max-height: calc(100% - 20%);"
      >
        <div
          class="t-dialog__header"
        >
          <svg
            class="t-icon t-icon-check-circle-filled t-is-success t-is-success"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
          操作成功
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body__icon"
        >
          是否前往查看订单列表
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-default t-dialog-cancel"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                取消
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                确认
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
  <br />
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       theme: info 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       theme: warning 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       theme: error 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       theme: success 
      
    </span>
  </button>
</div>
`;

exports[`Dialog modal demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       模态对话框 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       非模态对话框 
      
    </span>
  </button>
  <transition-stub>
    <div
      class="t-dialog-ctx t-dialog-ctx--fixed v-transfer-dom"
      style="display: none;"
    >
      
      <div
        class="t-dialog-mask"
      />
      <div
        class="t-dialog t-dialog--default t-dialog--top t-dialog--fixed"
        style="max-height: calc(100% - 20%);"
      >
        <div
          class="t-dialog__header"
        >
          <!---->
          模态对话框
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body"
        >
          
          <div>
            默认点击蒙层或按ESC可关闭
          </div>
          <div>
            我是内容
          </div>
          <div>
            我是内容
          </div>
          
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-default t-dialog-cancel"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                取消
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                确认
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
  <transition-stub>
    <div
      class="t-dialog-ctx v-transfer-dom"
      style="display: none;"
    >
      
      <!---->
      <div
        class="t-dialog t-dialog--default t-dialog--top t-dialog--fixed"
        style="max-height: calc(100% - 20%);"
      >
        <div
          class="t-dialog__header"
        >
          <!---->
          非模态对话框
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body"
        >
          
          <div>
            我是内容
          </div>
          <div>
            我是内容
          </div>
          
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-default t-dialog-cancel"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                取消
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                确认
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
</div>
`;

exports[`Dialog plugin demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       dialog 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       handleDialogNode 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       confirm 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       alert 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       DialogPlugin.confirm 
      
    </span>
  </button>
</div>
`;

exports[`Dialog position demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       默认位置 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       垂直居中 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       自定义top 
      
    </span>
  </button>
  <transition-stub>
    <div
      class="t-dialog-ctx t-dialog-ctx--fixed v-transfer-dom"
      style="display: none;"
    >
      
      <div
        class="t-dialog-mask"
      />
      <div
        class="t-dialog t-dialog--default t-dialog--top t-dialog--fixed"
        style="max-height: calc(100% - 20%);"
      >
        <div
          class="t-dialog__header"
        >
          <!---->
          对话框标题
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body"
        >
          对话框内容
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-default t-dialog-cancel"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                取消
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                确认
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
  <transition-stub>
    <div
      class="t-dialog-ctx t-dialog-ctx--fixed v-transfer-dom"
      style="display: none;"
    >
      
      <div
        class="t-dialog-mask"
      />
      <div
        class="t-dialog t-dialog--default t-dialog--center t-dialog--fixed"
      >
        <div
          class="t-dialog__header"
        >
          <!---->
          对话框标题
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body"
        >
          水平居中显示的对话框
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-default t-dialog-cancel"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                取消
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                确认
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
  <transition-stub>
    <div
      class="t-dialog-ctx t-dialog-ctx--fixed v-transfer-dom"
      style="display: none;"
    >
      
      <div
        class="t-dialog-mask"
      />
      <div
        class="t-dialog t-dialog--default t-dialog--top t-dialog--fixed"
        style="top: 50px; transform: translate(-50%, 0); transform-origin: 25% 25%; max-height: calc(100% - 50px);"
      >
        <div
          class="t-dialog__header"
        >
          <!---->
          对话框标题
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body"
        >
          自定义对话框距离窗口顶部位置，top: 50px
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-default t-dialog-cancel"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                取消
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                确认
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
</div>
`;

exports[`Dialog warning demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       提示反馈 
      
    </span>
  </button>
  <transition-stub>
    <div
      class="t-dialog-ctx t-dialog-ctx--fixed v-transfer-dom"
      style="display: none;"
    >
      
      <div
        class="t-dialog-mask"
      />
      <div
        class="t-dialog t-dialog--default t-dialog--top t-dialog--fixed"
        style="max-height: calc(100% - 20%);"
      >
        <div
          class="t-dialog__header"
        >
          <svg
            class="t-icon t-icon-info-circle-filled t-is-info t-is-info"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
          提示
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body__icon"
        >
          对话框内容
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-default t-dialog-cancel"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                取消
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                确认
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       成功反馈 
      
    </span>
  </button>
  <transition-stub>
    <div
      class="t-dialog-ctx t-dialog-ctx--fixed v-transfer-dom"
      style="display: none;"
    >
      
      <div
        class="t-dialog-mask"
      />
      <div
        class="t-dialog t-dialog--default t-dialog--top t-dialog--fixed"
        style="max-height: calc(100% - 20%);"
      >
        <div
          class="t-dialog__header"
        >
          <svg
            class="t-icon t-icon-check-circle-filled t-is-success t-is-success"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
          恭喜
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body__icon"
        >
          对话框内容
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-default t-dialog-cancel"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                取消
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                确认
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       警示反馈 
      
    </span>
  </button>
  <transition-stub>
    <div
      class="t-dialog-ctx t-dialog-ctx--fixed v-transfer-dom"
      style="display: none;"
    >
      
      <div
        class="t-dialog-mask"
      />
      <div
        class="t-dialog t-dialog--default t-dialog--top t-dialog--fixed"
        style="max-height: calc(100% - 20%);"
      >
        <div
          class="t-dialog__header"
        >
          <svg
            class="t-icon t-icon-error-circle-filled t-is-warning t-is-warning"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
          警示
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body__icon"
        >
          对话框内容
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <!---->
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                确认
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       错误反馈 
      
    </span>
  </button>
  <transition-stub>
    <div
      class="t-dialog-ctx t-dialog-ctx--fixed v-transfer-dom"
      style="display: none;"
    >
      
      <div
        class="t-dialog-mask"
      />
      <div
        class="t-dialog t-dialog--default t-dialog--top t-dialog--fixed"
        style="max-height: calc(100% - 20%);"
      >
        <div
          class="t-dialog__header"
        >
          <svg
            class="t-icon t-icon-error-circle-filled t-is-error t-is-error"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
          错误
        </div>
        <span
          class="t-dialog__close"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fillOpacity="0.9"
            />
          </svg>
        </span>
        <div
          class="t-dialog__body__icon"
        >
          对话框内容
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <!---->
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                确认
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       自定义icon 
      
    </span>
  </button>
  <transition-stub>
    <div
      class="t-dialog-ctx t-dialog-ctx--fixed v-transfer-dom"
      style="display: none;"
    >
      
      <div
        class="t-dialog-mask"
      />
      <div
        class="t-dialog t-dialog--default t-dialog--top t-dialog--fixed"
        style="max-height: calc(100% - 20%);"
      >
        <div
          class="t-dialog__header"
        >
          <!---->
          
          <div>
            <svg
              class="t-icon t-icon-check-circle-filled t-size-m"
              color="orange"
            >
              <use
                href="#t-icon-check-circle-filled"
              />
            </svg>
            <span
              style="vertical-align: middle;"
            >
              对话框标题
            </span>
          </div>
          
        </div>
        <span
          class="t-dialog__close"
        >
          <!---->
        </span>
        <div
          class="t-dialog__body"
        >
          对话框内容
        </div>
        <div
          class="t-dialog__footer"
        >
          <div>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-default t-dialog-cancel"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                取消
                
              </span>
            </button>
            <button
              class="t-button t-size-m t-button--variant-base t-button--theme-primary t-dialog-confirm"
              type="button"
            >
              <span
                class="t-button__text"
              >
                
                确认
                
              </span>
            </button>
          </div>
        </div>
      </div>
      
    </div>
  </transition-stub>
</div>
`;
